# lily-cc

./: .clang-format  .gitignore  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  build.sh  configure.sh  debug_gen.sh  debugbuild.sh  icon.xcf  install.sh  todo.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
docs/: ir.md
docs/ir/: README.md
garbaj/: definitions.h  tokeniser.c
liblily/: README.md
liblily/include/lilyc/: float_properties.h  float_routines.h  int_properties.h  int_routines.h
src/: CMakeLists.txt  definitions.h  main.c  main.h  parser-util.c  parser-util.h  parser.bison  parser.bison.old  parser.c  parser.h  parser.output  strmap.c  strmap.h  tokeniser.c  tokeniser.h
src/arch/: config-types.h  config.h  gen.c  gen.h  gen_fallbacks.c  types.h
src/arch/gr8cpu-r3/: description.txt  extraction help.js  gr8cpu-r3-config.h  gr8cpu-r3-gen.c  gr8cpu-r3-types.h  gr8cpu-r3_config.h  gr8cpu-r3_gen.c  gr8cpu-r3_gen.h  gr8cpu-r3_iasm.c  gr8cpu-r3_iasm.h  todo.md
src/arch/mos6502/: description.txt
src/arch/pixie-16/: bin_names.txt  description.txt  pixie-16_config.h  pixie-16_gen.c  pixie-16_gen.h  pixie-16_iasm.c  pixie-16_iasm.h  pixie-16_instruction.c  pixie-16_instruction.h  pixie-16_internal.h  pixie-16_options.c  pixie-16_options.h  pixie-16_postproc.c  todo.md
src/arch/px16/: description.txt  px16-config.h  px16-gen.c  px16-types.h
src/arch/template/: description.txt  template_config.h  template_gen.c  template_gen.h
src/asm/: asm.c  asm.h  asm_postproc.c  asm_postproc.h  gen.h  gen_fallbacks.c  gen_preproc.c  gen_preproc.h  gen_util.c  gen_util.h  softstack.c  softstack.h
src/common/: CMakeLists.txt  frontend.c  frontend.h
src/common/token/: tokenizer.c  tokenizer.h
src/compiler/: CMakeLists.txt
src/compiler/back/riscv/: CMakeLists.txt  rv_abi.c  rv_abi.h  rv_backend.c  rv_backend.h  rv_instructions.c  rv_instructions.h  rv_instructions.inc  rv_isel.c  rv_isel.h  rv_misc.c  rv_misc.h  rv_reloc.inc
src/compiler/common/: CMakeLists.txt  backend.c  backend.h  compiler.c  compiler.h  insn_proto.c  insn_proto.h  ir.c  ir.h  ir_types.h  tokenizer.c  tokenizer.h
src/compiler/common/back/: backend.h  cand_tree.c  cand_tree.h  codegen.c  insn_proto.c  insn_proto.h  match_tree.c  match_tree.h  regalloc.c  regalloc.h  sub_tree.c  sub_tree.h
src/compiler/common/codegen/: cand_tree.c  cand_tree.h  codegen.c  codegen.h  isel_tree.c  isel_tree.h
src/compiler/common/front/: compiler.c  compiler.h  tokenizer.c
src/compiler/common/ir/: interp.c  ir.c  ir.h  ir_interpreter.c  ir_interpreter.h  ir_optimizer.c  ir_optimizer.h  ir_parser.c  ir_parser.h  ir_serialization.c  ir_serialization.h  ir_tokenizer.c  ir_tokenizer.h  ir_types.c  ir_types.h  opt.c  opt.h
src/compiler/common/ir/defs/: ir_keywords.inc  ir_op1.inc  ir_op2.inc  ir_primitives.inc
src/compiler/common/token/: tokenizer.h
src/compiler/front/c/: CMakeLists.txt  c_compiler.c  c_compiler.h  c_keywords.inc  c_parser.c  c_parser.h  c_prepass.c  c_prepass.h  c_std.h  c_tokenizer.c  c_tokenizer.h  c_tokens.inc  c_types.c  c_types.h  c_values.c  c_values.h
src/compiler/front/c/parse/: c_parser.c
src/compiler/front/c/token/: c_tokenizer.c
src/debug/: alloc_tests.c  alloc_tests.h  gen_tests.c  gen_tests.h  pront.c  pront.h
src/front/c/: CMakeLists.txt
src/front/c/token/: c_keywords.inc  c_tokenizer.c  c_tokenizer.h
src/main/: CMakeLists.txt  explainer.c  main.c
src/modes/: addr2line.c  addr2line.h  compile.c  compile.h  modes.h
src/objects/: elf.c  elf.h  objects.c  objects.h
src/test/: CMakeLists.txt  main.c  testcase.h
src/test/back/riscv/: CMakeLists.txt  codegen_test.c
src/test/common/: CMakeLists.txt  arith128_test.c  compiler.c  compiler_test.c  frontend.c  ir_test.c  set_test.c
src/test/front/c/: CMakeLists.txt  c_compiler_test.c  c_parser.c  c_parser_test.c  c_tokenizer.c  c_tokenizer_test.c
src/test/test-common/: CMakeLists.txt  testcase.c  testcase.h
src/types/: syntaxtree.h
src/util/: CMakeLists.txt  ansi_codes.h  arith128.c  arith128.h  array_util.c  array_util.h  arrays.c  arrays.h  char_repr.c  char_repr.h  color.c  color.h  ctxalloc.c  ctxalloc.h  ctxalloc_alias.h  ctxalloc_warn.h  hash.c  list.c  list.h  map.c  map.h  refcount.c  refcount.h  set.c  set.h  strmap.c  strmap.h  strong_malloc.c  strong_malloc.h  unreachable.c  unreachable.h  utf8.c  utf8.h
test/: expr  test0.asm  test0.c  test0.txt  test1.asm  test1.c  test2.asm  test3.asm  test4.asm  test5.asm  test_division.c  test_errors.c  test_recursion.c  test_syntax.c  testcase_assignment.c
test-files/: test_assign.c  test_cast.c  test_compound.c  test_decls.c  test_division.c  test_expr.c  test_forloop.c  test_ln_a.c  test_ln_b.c  test_pointer.c  test_sizes.c  test_strength.c  test_structparam.c  test_types.c  testcase_assignment.c
